profilelist1exp/unpackaged/objects/Partner_Hub_Record_Deleted__c.object
<CustomObject>
    <description>Records of Partner Request, Opportunity, Competency Tracker, Partner Course, End Customer, End Customer Contact, Payment object when deleted will be moved to this staging table for Partner Hub integration.</description>
    <fields>
        <fullName>Key_Identifier__c</fullName>
        <description>Key identifier used in Partner Hub</description>
        <label>Key Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_GUID__c</fullName>
        <description>SFDC GUID of the deleted record</description>
        <label>Record GUID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Name of the object deleted</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partner Request</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Competency Tracker</fullName>
                </value>
                <value>
                    <fullName>Partner Course</fullName>
                </value>
                <value>
                    <fullName>End Customer</fullName>
                </value>
                <value>
                    <fullName>End Customer Contact</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Demo Unit</fullName>
                </value>
                <value>
                    <fullName>Demo Unit Setup</fullName>
                </value>
                <value>
                    <fullName>LOB Registration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Partner Hub Record Deleted</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HUB-{0000000000}</displayFormat>
        <label>Partner Hub Record Deleted</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Hub Records Deleted</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>